src/test/deca/context/invalid/homemade/indefined_variable_decompile.res
{
	int c;
	(c = (a + c));
}
